[project]
  name = "pulumi_quant"
  description = "A Pulumi package for managing QuantCDN resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "quant", "quantcdn", "cdn", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.1.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.quantcdn.io"
    Repository = "https://github.com/quantcdn/pulumi-quant"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_quant = ["py.typed", "pulumi-plugin.json"]
